--- a/src/components/SriYantra/SriYantra.module.css
+++ b/src/components/SriYantra/SriYantra.module.css
@@ -117,9 +117,9 @@
     }
 
     .container {
-        max-width: 92vw;
-        height: 92vw;
-        margin: 10px 0;
+        max-width: 85vw;
+        height: 85vw;
+        margin: 0 auto;
         background: transparent !important;
     }
 
